--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.envoisrecois/com.example.envoisrecois.HelloApplication</mainClass>
+                            <mainClass>com.example.envoisrecois/com.example.envoisrecois.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
